--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+body {
+  margin: 0;
+  font-family: "Montserrat";
+}
+
 .about-container {
   height: 700px;
   width: 100%;
@@ -112,10 +117,10 @@
   height: 700px;
   margin-top: 200px;
   padding-bottom: 100px;
+  position: relative;
 }
 .contact-container #contact-wave {
   background-color: white;
-  height: 230px;
 }
 .contact-container #contact-wave img {
   transform: scale(1, 1);
@@ -131,7 +136,7 @@
 }
 .contact-container #contact-methods-container {
   display: grid;
-  grid-template-areas: "discord spigot email";
+  grid-template-areas: "spigot discord email";
   justify-content: center;
 }
 .contact-container #contact-methods-container .contact-method {
@@ -165,11 +170,6 @@
   box-shadow: 0 8px 16px 0 #ddd;
 }
 
-@media (max-width: 1250px) {
-  #contact-wave {
-    display: none;
-  }
-}
 @media (max-width: 1014px) {
   .skills {
     display: grid;
